<resources>
    <string name="app_name">OS2-kriptografija</string>
    <string name="kreiraj_text_za_enkripciju">Kreiraj datoteku s tekstom za kreiranje</string>
    <string name="text_to_crypt">Tekst za kriptiranje</string>
    <string name="ucitaj_kriptirani_tekst_iz_datoteke">Učitaj kriptirani tekst iz datoteke</string>
    <string name="kriptiraj_simetricno">Kriptiraj simetrično</string>
    <string name="dekriptiraj_simetricno">Dekriptiraj simetrično</string>
    <string name="dekriptirani_tekst">Dekriptirani tekst</string>
    <string name="kriptirani_tekst">Kriptirani tekst</string>
    <string name="dekriptiraj_asimetricno">DEKRIPTIRAJ ASIMETRIČNO</string>
    <string name="kriptiraj_asimetricno">KRIPTIRAJ ASIMETRIČNO</string>
    <string name="prebaci_se_na_asimetri_no_kriptiranje">PREBACI SE NA ASIMETRIČNO KRIPTIRANJE</string>
    <string name="napravi_sazetak_poruke">NAPRAVI SAŽETAK PORUKE</string>
    <string name="napravi_digitalni_potpis">NAPRAVI DIGITALNI POTPIS</string>
    <string name="provjeri_digitalni_potpis">PROVJERI DIGITALNI POTPIS</string>
</resources>
