<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="89dp">

    <Button
        android:id="@+id/buttonDecryptDataSymmetric2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:onClick="decryptSymmetric"
        android:text="@string/dekriptiraj_simetricno"
        app:layout_constraintBottom_toTopOf="@+id/textViewDecryptedText"
        app:layout_constraintEnd_toEndOf="@+id/editTextEncryptedText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewDecryptedText"
        app:layout_constraintTop_toBottomOf="@+id/editTextEncryptedText" />

    <Button
        android:id="@+id/buttonCreateTextForEncryption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="16dp"
        android:onClick="createText"
        android:text="@string/kreiraj_text_za_enkripciju"
        app:layout_constraintBottom_toTopOf="@+id/buttonFileDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextToCrypt" />

    <EditText
        android:id="@+id/editTextToCrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateTextForEncryption"
        app:layout_constraintEnd_toEndOf="@+id/textViewTextToCrypt"
        app:layout_constraintTop_toBottomOf="@+id/textViewTextToCrypt" />

    <EditText
        android:id="@+id/editTextEncryptedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonDecryptDataSymmetric2"
        app:layout_constraintStart_toStartOf="@+id/buttonEncryptDataSymmetric"
        app:layout_constraintTop_toBottomOf="@+id/textViewEncryptedText" />

    <EditText
        android:id="@+id/editTextDecryptedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextEncryptedText"
        app:layout_constraintTop_toBottomOf="@+id/textViewDecryptedText" />

    <Button
        android:id="@+id/buttonFileDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="23dp"
        android:onClick="getCryptedText"
        android:text="@string/ucitaj_kriptirani_tekst_iz_datoteke"
        app:layout_constraintBottom_toTopOf="@+id/buttonEncryptDataSymmetric"
        app:layout_constraintEnd_toEndOf="@+id/buttonCreateTextForEncryption"
        app:layout_constraintStart_toStartOf="@+id/buttonCreateTextForEncryption"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateTextForEncryption" />

    <Button
        android:id="@+id/buttonEncryptDataSymmetric"
        android:layout_width="197dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:onClick="encryptSymmetric"
        android:text="@string/kriptiraj_simetricno"
        app:layout_constraintBottom_toTopOf="@+id/textViewEncryptedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFileDialog" />

    <TextView
        android:id="@+id/textViewTextToCrypt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:text="@string/text_to_crypt"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextToCrypt"
        app:layout_constraintEnd_toEndOf="@+id/buttonCreateTextForEncryption"
        app:layout_constraintStart_toStartOf="@+id/buttonCreateTextForEncryption"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEncryptedText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/kriptirani_tekst"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEncryptedText"
        app:layout_constraintEnd_toEndOf="@+id/buttonEncryptDataSymmetric"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEncryptedText"
        app:layout_constraintTop_toBottomOf="@+id/buttonEncryptDataSymmetric" />

    <TextView
        android:id="@+id/textViewDecryptedText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="13dp"
        android:text="@string/dekriptirani_tekst"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDecryptedText"
        app:layout_constraintEnd_toEndOf="@+id/editTextDecryptedText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEncryptedText"
        app:layout_constraintTop_toBottomOf="@+id/buttonDecryptDataSymmetric2" />

</android.support.constraint.ConstraintLayout>